# iso-8583-message

./: Cargo.toml  README.md
formats/: base-format.json
sample_messages/: financial-advice.json
specs/: mastercard-authorization-1987-spec.json
src/: base_format.rs  bitmaps.rs  error.rs  format.rs  lib.rs  mc_auth_iso_message.rs  message_types.rs  response.rs
src/field/: content_type.rs  error.rs  len_type.rs  mod.rs
src/fields/: content_type.rs  field.rs  length_type.rs  mod.rs
src/iso_message/: bitmap.rs  mod.rs
src/spec/: content_type.rs  data_element.rs  deserialize.rs  iso_map.rs  length.rs  mod.rs  redaction_level.rs
src/spec_builder/: content_type.rs  length.rs  mod.rs  redaction_level.rs
tests/: authorizations.rs  main_test.rs  network_messages.rs  spec.rs
