[package]
name = "iso-8583-message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive", "std"] }
serde_json = "1.0.81"
